# mobydump

./: .gitignore  LICENSE  README.md  changelog.md  mobydump.py  output.txt  platform-names.json  platforms.json  pyproject.toml  requirements.txt
modules/: api_requests.py  data_sanitize.py  get_mg_data.py  input.py  mdlogo.py  requests.py  utils.py
tools/: build-mobydump.py  get_dropbox_refresh_token.py
